--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     "argon2": "^0.28.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-pg-simple": "^9.0.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jwt": "^0.2.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
