--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jwt": "^0.2.0",
+    "nestjs-rate-limiter": "^3.1.0",
+    "nestjs-throttler": "^0.3.0",
+    "nodemailer": "^6.9.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.11.0",
